--- a/index.html
+++ b/index.html
@@ -15,35 +15,30 @@
   </header>
 
   <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
+  <div class="container">
+    <div class="search-section">
+        <h2>Search for a City:</h2>
         <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
-            </div>
-          </div>
+            <input class="form-input weather-search" type="text" id="search-input" placeholder="Enter city name" />
+            <button type="submit" class="btn search-button" id="search-button">Search</button>
         </form>
-      </aside>
-      
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
-      </div>
+        <div id="history-container">
+            <h3>Search History:</h3>
+            <div id="history" class="list-group"></div>
+        </div>
     </div>
-  </div>
+    <div class="weather-display-section">
+        <h2>Current Weather</h2>
+        <!-- Display current weather information here -->
+        <div id="today" class="weather-card"></div>
+        
+        <h2>5-Day Forecast</h2>
+        <!-- Display forecast information here -->
+        <div id="forecast" class="weather-forecast"></div>
+    </div>
+</div>
+
+
 
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
