--- a/index.html
+++ b/index.html
@@ -15,36 +15,50 @@
   </header>
 
   <!-- max-width for ultra wide resolutions -->
-  <div class="container">
-    <div class="search-section">
-        <h2>Search for a City:</h2>
+  <div class="container-fluid" style="max-width: 1400px">
+    <div class="row">
+      <aside class="col-lg-3 pb-3">
+        <h2 id="form-heading" class="mt-1 h3 form-label">
+          Search for a City:
+        </h2>
         <form id="search-form" class="form">
-            <input class="form-input weather-search" type="text" id="search-input" placeholder="Enter city name" />
-            <button type="submit" class="btn search-button" id="search-button">Search</button>
+          <div class="form-inline form-group">
+            <div class="input-group">
+              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
+                aria-labelledby="form-heading" aria-controls="today forecast" />
+              <div class="input-group-append">
+                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+                  Search
+                </button>
+                <hr class="hr weather-hr" />
+              </div>
+            </div>
+            <div class="weather-data">
+              <div class="current-weather">
+                <div class="weather-details">
+                  <h2>_______ ( ______ )</h2>
+                  <h6>Temperature: __°C</h6>
+                  <h6>Wind: __ M/S</h6>
+                  <h6>Humidity: __%</h6>
+                </div>
+              </div>
+          </div>
         </form>
-        <div id="history-container">
-            <h3>Search History:</h3>
-            <div id="history" class="list-group"></div>
-        </div>
-    </div>
-    <div class="weather-display-section">
-        <h2>Current Weather</h2>
-        <!-- Display current weather information here -->
-        <div id="today" class="weather-card"></div>
-        
-        <h2>5-Day Forecast</h2>
-        <!-- Display forecast information here -->
-        <div id="forecast" class="weather-forecast"></div>
-    </div>
-</div>
+        <div class="list-group" id="history"></div>
+      </aside>
 
-
+      <div class="col-lg-9 pb-3">
+        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+      </div>
+    </div>
+  </div>
 
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
