--- a/index.html
+++ b/index.html
@@ -10,49 +10,63 @@
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
+  <header id="weather-header">
+      <h1>Weather Dashboard</h1>
   </header>
-
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
-            </div>
-            <div class="weather-data">
-              <div class="current-weather">
-                <div class="weather-details">
+  <div class="container">
+      <section class="weather-input">
+          <h3>Search for a City :</h3>
+          <input class="city-input" type="text" placeholder="Tirana">
+          <button class="search-button">Search</button>
+      </section>
+      <section class="weather-data">
+          <div class="current-weather">
+              <div class="weather-details">
                   <h2>_______ ( ______ )</h2>
                   <h6>Temperature: __°C</h6>
                   <h6>Wind: __ M/S</h6>
                   <h6>Humidity: __%</h6>
-                </div>
               </div>
           </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
-      </div>
-    </div>
+          <div class="days-forecast">
+              <h2>5-Day Forecast</h2>
+              <ul class="weather-cards">
+                  <!-- Your forecast cards go here -->
+                  <li class="card">
+                    <h3>( ______ )</h3>
+                    <h6>Temp: __C</h6>
+                    <h6>Wind: __ M/S</h6>
+                    <h6>Humidity: __%</h6>
+                  </li>
+                  <li class="card">
+                    <h3>( ______ )</h3>
+                    <h6>Temp: __C</h6>
+                    <h6>Wind: __ M/S</h6>
+                    <h6>Humidity: __%</h6>
+                  </li>
+                  <li class="card">
+                    <h3>( ______ )</h3>
+                    <h6>Temp: __C</h6>
+                    <h6>Wind: __ M/S</h6>
+                    <h6>Humidity: __%</h6>
+                  </li>
+                  <li class="card">
+                    <h3>( ______ )</h3>
+                    <h6>Temp: __C</h6>
+                    <h6>Wind: __ M/S</h6>
+                    <h6>Humidity: __%</h6>
+                  </li>
+                  <li class="card">
+                    <h3>( ______ )</h3>
+                    <h6>Temp: __C</h6>
+                    <h6>Wind: __ M/S</h6>
+                    <h6>Humidity: __%</h6>
+                  </li>
+              </ul>
+          </div>
+      </section>
   </div>
+
 
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
