--- a/index.html
+++ b/index.html
@@ -1,78 +1,41 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Weather Dashboard</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/reset.css">
+    <title>Weather Dashboard</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
 
 <body>
-  <header id="weather-header">
-      <h1>Weather Dashboard</h1>
-  </header>
-  <div class="container">
-      <section class="weather-input">
-          <h3>Search for a City :</h3>
-          <input class="city-input" type="text" placeholder="Tirana">
-          <button class="search-button">Search</button>
-      </section>
-      <section class="weather-data">
-          <div class="current-weather">
-              <div class="weather-details">
-                  <h2>_______ ( ______ )</h2>
-                  <h6>Temperature: __°C</h6>
-                  <h6>Wind: __ M/S</h6>
-                  <h6>Humidity: __%</h6>
-              </div>
-          </div>
-          <div class="days-forecast">
-              <h2>5-Day Forecast</h2>
-              <ul class="weather-cards">
-                  <!-- Your forecast cards go here -->
-                  <li class="card">
-                    <h3>( ______ )</h3>
-                    <h6>Temp: __C</h6>
+    <h1>Weather Dashboard</h1>
+    <div class="container">
+        <div class="weather-input">
+            <h3>Enter a City Name</h3>
+            <input class="city-input" type="text" placeholder="Tirana">
+            <button class="search-btn">Search</button>
+            <div class="separator"></div>
+        </div>
+        <div class="weather-data">
+            <div class="current-weather">
+                <div class="details">
+                    <h2>_______ ( ______ )</h2>
+                    <h6>Temperature: __°C</h6>
                     <h6>Wind: __ M/S</h6>
                     <h6>Humidity: __%</h6>
-                  </li>
-                  <li class="card">
-                    <h3>( ______ )</h3>
-                    <h6>Temp: __C</h6>
-                    <h6>Wind: __ M/S</h6>
-                    <h6>Humidity: __%</h6>
-                  </li>
-                  <li class="card">
-                    <h3>( ______ )</h3>
-                    <h6>Temp: __C</h6>
-                    <h6>Wind: __ M/S</h6>
-                    <h6>Humidity: __%</h6>
-                  </li>
-                  <li class="card">
-                    <h3>( ______ )</h3>
-                    <h6>Temp: __C</h6>
-                    <h6>Wind: __ M/S</h6>
-                    <h6>Humidity: __%</h6>
-                  </li>
-                  <li class="card">
-                    <h3>( ______ )</h3>
-                    <h6>Temp: __C</h6>
-                    <h6>Wind: __ M/S</h6>
-                    <h6>Humidity: __%</h6>
-                  </li>
-              </ul>
-          </div>
-      </section>
-  </div>
+                </div>
+            </div>
+            <div class="days-forecast">
+                <h2>5-Day Forecast</h2>
+                <ul class="weather-cards"></ul>
+            </div>
+        </div>
+    </div>
 
-
-  <!-- Day.js -->
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
