--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/reset.css">
-    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="./style.css"> 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <title>Weather Dashboard</title> 
 </head>
 
 <body>
@@ -15,9 +15,9 @@
     <div class="container">
         <div class="weather-input">
             <h3>Enter a City Name</h3>
-            <input class="city-input" type="text" placeholder="Tirana">
+            <input class="city-input" type="text" placeholder="...">
             <button class="search-btn">Search</button>
-            <div class="separator"></div>
+        
         </div>
         <div class="weather-data">
             <div class="current-weather">
@@ -35,6 +35,7 @@
         </div>
     </div>
 
+    
     <script src="script.js"></script>
 </body>
 
